// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/home/avale/node/jest-dot-http-files/tests/sample.http GET https://jsonplaceholder.typicode.com/todos/1?_=12dadaa2-5db4-4cc8-9e41-0155a58abeb1 1`] = `
{
  "request": {
    "body": "undefined",
    "headers": [
      [
        "content-type",
        "application/json",
      ],
    ],
    "meta": {
      "expect": {
        "global": false,
        "value": [
          [
            "status",
            200,
          ],
          [
            "statusText",
            "OK",
          ],
        ],
      },
      "ignoreHeaders": {
        "global": false,
        "value": ".*",
      },
      "name": {
        "global": false,
        "value": "sample1",
      },
    },
    "method": "GET",
    "url": "https://jsonplaceholder.typicode.com/todos/1?_=12dadaa2-5db4-4cc8-9e41-0155a58abeb1",
    "variables": {
      "dash": {
        "global": true,
        "value": "12dadaa2-5db4-4cc8-9e41-0155a58abeb1",
      },
      "host": {
        "global": true,
        "value": "https://jsonplaceholder.typicode.com",
      },
    },
  },
  "response": {
    "body": {
      "completed": false,
      "id": 1,
      "title": "delectus aut autem",
      "userId": 1,
    },
    "headers": [
      [
        "access-control-allow-credentials",
        Anything,
      ],
      [
        "alt-svc",
        Anything,
      ],
      [
        "cache-control",
        Anything,
      ],
      [
        "cf-cache-status",
        Anything,
      ],
      [
        "cf-ray",
        Anything,
      ],
      [
        "connection",
        Anything,
      ],
      [
        "content-encoding",
        Anything,
      ],
      [
        "content-type",
        Anything,
      ],
      [
        "date",
        Anything,
      ],
      [
        "etag",
        Anything,
      ],
      [
        "expires",
        Anything,
      ],
      [
        "nel",
        Anything,
      ],
      [
        "pragma",
        Anything,
      ],
      [
        "report-to",
        Anything,
      ],
      [
        "reporting-endpoints",
        Anything,
      ],
      [
        "server",
        Anything,
      ],
      [
        "transfer-encoding",
        Anything,
      ],
      [
        "vary",
        Anything,
      ],
      [
        "via",
        Anything,
      ],
      [
        "x-content-type-options",
        Anything,
      ],
      [
        "x-powered-by",
        Anything,
      ],
      [
        "x-ratelimit-limit",
        Anything,
      ],
      [
        "x-ratelimit-remaining",
        Anything,
      ],
      [
        "x-ratelimit-reset",
        Anything,
      ],
    ],
    "status": 200,
    "statusText": "OK",
  },
}
`;

exports[`/home/avale/node/jest-dot-http-files/tests/sample.http GET https://jsonplaceholder.typicode.com/todos/2?_=12dadaa2-5db4-4cc8-9e41-0155a58abeb1 1`] = `
{
  "request": {
    "body": "undefined",
    "headers": [
      [
        "content-type",
        "application/json",
      ],
    ],
    "meta": {
      "expect": {
        "global": false,
        "value": [
          [
            "status",
            200,
          ],
          [
            "statusText",
            "OK",
          ],
        ],
      },
      "ignoreHeaders": {
        "global": false,
        "value": ".*",
      },
      "name": {
        "global": false,
        "value": "sample2",
      },
    },
    "method": "GET",
    "url": "https://jsonplaceholder.typicode.com/todos/2?_=be47c963-5e9d-4e55-88b5-63b52815eb5e",
  },
  "response": {
    "body": {
      "completed": false,
      "id": 2,
      "title": "quis ut nam facilis et officia qui",
      "userId": 1,
    },
    "headers": [
      [
        "access-control-allow-credentials",
        Anything,
      ],
      [
        "alt-svc",
        Anything,
      ],
      [
        "cache-control",
        Anything,
      ],
      [
        "cf-cache-status",
        Anything,
      ],
      [
        "cf-ray",
        Anything,
      ],
      [
        "connection",
        Anything,
      ],
      [
        "content-encoding",
        Anything,
      ],
      [
        "content-type",
        Anything,
      ],
      [
        "date",
        Anything,
      ],
      [
        "etag",
        Anything,
      ],
      [
        "expires",
        Anything,
      ],
      [
        "nel",
        Anything,
      ],
      [
        "pragma",
        Anything,
      ],
      [
        "report-to",
        Anything,
      ],
      [
        "reporting-endpoints",
        Anything,
      ],
      [
        "server",
        Anything,
      ],
      [
        "transfer-encoding",
        Anything,
      ],
      [
        "vary",
        Anything,
      ],
      [
        "via",
        Anything,
      ],
      [
        "x-content-type-options",
        Anything,
      ],
      [
        "x-powered-by",
        Anything,
      ],
      [
        "x-ratelimit-limit",
        Anything,
      ],
      [
        "x-ratelimit-remaining",
        Anything,
      ],
      [
        "x-ratelimit-reset",
        Anything,
      ],
    ],
    "status": 200,
    "statusText": "OK",
  },
}
`;
